--- a/php/templates/default/php.ini.erb
+++ b/php/templates/default/php.ini.erb
@@ -267,7 +267,7 @@ expose_php = On
 ;;;;;;;;;;;;;;;;;;;
 
 max_execution_time = <%= node[:php5][:resource_limits][:max_execution_time] %>      ; Maximum execution time of each script, in seconds
-max_input_time = 60 ; Maximum amount of time each script may spend parsing request data
+max_input_time = <%= node[:php5][:resource_limits][:max_input_time] %>  ; Maximum amount of time each script may spend parsing request data
 ;max_input_nesting_level = 64 ; Maximum input variable nesting level
 memory_limit = <%= node[:php5][:resource_limits][:memory_limit] %>      ; Maximum amount of memory a script may consume (16MB)
 
